--- a/catgeories.html
+++ b/catgeories.html
@@ -291,7 +291,7 @@
             <span style="color: rgb(53, 206, 6); font-size: large;"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></span>
                   
                     <div class="price">
-                      <span style="color: blue; font-size: xx-large;">$60 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $40</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 20% Offer</span>
+                      <span style="color: blue; font-size: xx-large;">$30 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $100</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 70% Offer</span>
                     </div>
                       <p class="card-text">living room carpet .</p>
                       <a href="#" class="btn btn-primary">AddtoCart</a>
@@ -304,7 +304,7 @@
                     <div class="card-body text-center">
                       <h5 class="card-title">Silk Carpet Persian</h5>
                       <div class="price">
-                        <span style="color: blue; font-size: xx-large;">$60 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $40</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 20% Offer</span>
+                        <span style="color: blue; font-size: xx-large;">$80 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $100</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 20% Offer</span>
                       </div>
                       <p class="card-text">Persian carpet, in light blue and beige coloradding a touch of tradition. </p>
                       <a href="#" class="btn btn-primary">AddtoCart</a>
@@ -317,7 +317,7 @@
                     <div class="card-body text-center">
                       <h5 class="card-title">Wool Blend Morden Carpet</h5>
                       <div class="price">
-                        <span style="color: blue; font-size: xx-large;">$60 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $40</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 20% Offer</span>
+                        <span style="color: blue; font-size: xx-large;">$80 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $120</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 40% Offer</span>
                         </div>
                         <div
                         <span style=" color:darkred; font-size:large;">Out Off Stock</span> 
@@ -333,7 +333,7 @@
                     <div class="card-body text-center">
                       <h5 class="card-title">Polyester Morden Carpet </h5>
                       <div class="price">
-                        <span style="color: blue; font-size: xx-large;">$60 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $40</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 20% Offer</span>
+                        <span style="color: blue; font-size: xx-large;">$60 </span> |&nbsp;<span style="text-decoration: line-through; color: rgb(133, 77, 77); font-size: large;"> $80</span> |&nbsp;<span style="color:  rgb(44, 138, 0); font-size: large;"> 20% Offer</span>
                    </div>
                       <p class="card-text">living room carpet red and beige coloradding .</p>
                       <a href="#" class="btn btn-primary">AddtoCart</a>
@@ -352,7 +352,7 @@
               </div>
               <div class="col-lg-6 col-md-6 col-12 p-lg-5" p-2>
                   <h1>ABOUT US</h1>
-                  <p>A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing.A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.</p>
+                  <p>A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing.t is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since ths are less expensive than wool. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.A carpet is a textile floor covering typically consisting of an upper layer of pile attached to a backing. The pile was traditionally made from wool, but since the 20th century synthetic fibers such as polypropylene, nylon, or polyester have often been used, as these fibers are less expensive than wool.</p>
               </div>
           </div>
       </div>
